2020-07-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Sanity checks for sscanf arguments.

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/ez80_z80/Makefile.in,
	  device/lib/ez80_z80/__itoa.s,
	  device/lib/ez80_z80/__ltoa.s,
	  device/lib/ez80_z80/__strreverse.s,
	  device/lib/ez80_z80/__uitobcd.s,
	  device/lib/ez80_z80/__ultobcd.s:
	  Fix Bug #3077 for eZ80_Z80 port
	* device/lib/z180/Makefile.in,
	  device/lib/z180/__itoa.s,
	  device/lib/z180/__ltoa.s,
	  device/lib/z180/__strreverse.s,
	  device/lib/z180/__uitobcd.s,
	  device/lib/z180/__ultobcd.s:
	  Fix Bug #3077 for Z180 port
	* device/lib/z80n/Makefile.in,
	  device/lib/z80n/__itoa.s,
	  device/lib/z80n/__ltoa.s,
	  device/lib/z80n/__strreverse.s,
	  device/lib/z80n/__uitobcd.s,
	  device/lib/z80n/__ultobcd.s:
	  Fix Bug #3077 for Z80N port

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph-ez80_z80.def:
	  Fix ez80 peephole rules 9hl and 9de.

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/makebin/makebin.c:
	  Fix compiler warning.

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph-ez80_z80.def,
	  src/z80/peeph.def:
	  New useful peephole rules for Z80-like targets.

2020-07-20 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/support/makebin.c:
	  Add virtual address translation for gbz80 ROMs.
	  This is a workaround for #115.


2020-07-20 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/support/makebin.c:
	  Support IHX record type 0x04 introduced in [r11746].
	  This is needed for #115.


2020-07-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph-ez80_z80.def:
	  Improve use of hl in z80 (and related) register allocation.

2020-07-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asgb/gbmch.c (minit),
	* sdas/asz80/z80mch.c (minit): set address space to 24 bit
	* sdas/linksrc/lkdata.c,